# aws-parameters-and-secrets-lambda

./: Cargo.toml
